# Prac2021

./: MyProtocolHandler.h
task1/: Addons.xcu  Makefile  MyProtocolHandler.cxx  NewMyProtocolHandler.cxx
task2/: Job.cpp  Job.h  Processor.cpp  Processor.h  best_solution.txt  con_component.cpp  con_component.h  graph.cpp  graph.h  main.cpp  parallel_threads.cpp  parallel_threads.h  parsing.cpp  parsing.h  plots.py  run_thread.h  test.cpp  threads.cpp  threads.h  types.h
task2/best_coherent/: best_sol_100_1.txt  best_sol_100_2.txt  best_sol_100_3.txt  best_sol_100_4.txt  best_sol_100_5.txt  best_sol_200_1.txt  best_sol_200_2.txt  best_sol_200_3.txt  best_sol_200_4.txt  best_sol_200_5.txt
task2/best_parallel/: best_sol_100_1.txt  best_sol_100_16.txt  best_sol_100_2.txt  best_sol_100_4.txt  best_sol_100_8.txt  best_sol_200_1.txt  best_sol_200_16.txt  best_sol_200_2.txt  best_sol_200_4.txt  best_sol_200_8.txt
task2/coherent_res/: coherent_res_100_1.txt  coherent_res_100_2.txt  coherent_res_100_3.txt  coherent_res_100_4.txt  coherent_res_100_5.txt  coherent_res_200_1.txt  coherent_res_200_2.txt  coherent_res_200_3.txt  coherent_res_200_4.txt  coherent_res_200_5.txt  coherent_res_300_1.txt  coherent_res_300_2.txt  coherent_res_300_3.txt  coherent_res_300_4.txt  coherent_res_300_5.txt  coherent_res_400_1.txt
task2/graphs/: graph_500.dot
task2/jobs/: jobs_100_2_20  jobs_200_2_20  jobs_300_2_20  jobs_400_2_20  jobs_500_2_20
task2/parallel_res/: parallel_res_100_1.txt  parallel_res_100_16.txt  parallel_res_100_2.txt  parallel_res_100_32.txt  parallel_res_100_4.txt  parallel_res_100_8.txt  parallel_res_200_1.txt  parallel_res_200_16.txt  parallel_res_200_2.txt  parallel_res_200_4.txt  parallel_res_200_8.txt  parallel_res_300_16.txt  parallel_res_300_2.txt  parallel_res_300_4.txt  parallel_res_300_8.txt  parallel_res_400_2.txt
task2/procs/: 10_procs_100.txt  10_procs_200.txt  10_procs_300.txt  10_procs_400.txt  11_procs_100.txt  11_procs_200.txt  11_procs_300.txt  11_procs_400.txt  12_procs_100.txt  12_procs_200.txt  (+50 more)
task3/: CMakeLists.txt  distance.cpp  distance.h  factory.cpp  factory.h  funcs.h  graphs.h  main.cpp  types.h
task3/graphs/: bipartite.cpp  bipartite.h  complete.cpp  complete.h  graph.cpp  graph.h  simple.cpp  simple.h  weighted.cpp  weighted.h
task3/tests/: test_creation.cpp  test_distance.cpp  test_graph.cpp
